<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000D6B"
    android:orientation="horizontal"
    tools:context=".Auth">

    <ImageView
        android:id="@+id/amlistLogoImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/amlist" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/sub_judul"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amlistLogoImageView" />

    <TextView
        android:id="@+id/polaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gambar_pola_title"
        android:textColor="#fff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/polaImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/polaTextView"
        app:srcCompat="@drawable/pola"
        android:contentDescription="@string/pola_image" />

    <ImageButton
        android:id="@+id/lupaPolaImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/lupa_pola_icon"
        android:src="@drawable/lock_reset_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/lupaPolaTextView"
        app:layout_constraintEnd_toStartOf="@+id/lupaPolaTextView" />

    <TextView
        android:id="@+id/lupaPolaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lupa_pola_text"
        android:textColor="#FF4081"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/polaImageView"
        app:layout_constraintTop_toBottomOf="@+id/polaImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>