<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000D6B"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/notificationImageButton"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="22dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/icon"
        android:src="@drawable/edit_notifications_50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Nada Dering"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/notificationImageButton"
        app:layout_constraintTop_toTopOf="@+id/notificationImageButton" />

    <ImageButton
        android:id="@+id/toggleImageButton"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="22dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/icon"
        android:src="@drawable/toggle_60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/checkImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/uncheckbutton"
        android:src="@drawable/outline_circle_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationImageButton"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/ListTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/icon"
        android:text="@string/alert_01"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkImageButton"
        app:layout_constraintStart_toEndOf="@+id/checkImageButton" />

    <View
        android:id="@+id/lineView1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="26dp"
        android:background="#66FF008E"
        app:layout_constraintBottom_toBottomOf="@+id/checkImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ListTextView1" />

    <TextView
        android:id="@+id/ListTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/icon"
        android:text="@string/alert_02"
        android:layout_marginBottom="12dp"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/unCheckImageButton1"
        app:layout_constraintStart_toEndOf="@+id/unCheckImageButton1" />

    <ImageButton
        android:id="@+id/unCheckImageButton1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/uncheckbutton"
        android:src="@drawable/check_circle_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkImageButton" />

    <View
        android:id="@+id/lineView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="26dp"
        android:background="#66FF008E"
        app:layout_constraintBottom_toBottomOf="@+id/unCheckImageButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ListTextView2" />

    <ImageButton
        android:id="@+id/unCheckImageButton2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/uncheckbutton"
        android:src="@drawable/outline_circle_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unCheckImageButton1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/ListTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/alert_03"
        android:layout_marginBottom="12dp"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/unCheckImageButton2"
        app:layout_constraintStart_toEndOf="@+id/unCheckImageButton2" />

    <View
        android:id="@+id/lineView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="26dp"
        android:background="#66FF008E"
        android:layout_marginStart="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/unCheckImageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ListTextView3" />

    <ImageButton
        android:id="@+id/unCheckImageButton3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/uncheckbutton"
        android:src="@drawable/outline_circle_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unCheckImageButton2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/ListTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/alert_04"
        android:layout_marginBottom="12dp"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/unCheckImageButton3"
        app:layout_constraintStart_toEndOf="@+id/unCheckImageButton3" />

    <View
        android:id="@+id/lineView4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="26dp"
        android:background="#66FF008E"
        app:layout_constraintBottom_toBottomOf="@+id/unCheckImageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ListTextView4" />

</androidx.constraintlayout.widget.ConstraintLayout>





















